Fixing alignment for relational AI and changing the relational AI color.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -25,6 +25,15 @@ $primary-color: #0a9be9;
     }
 }
 
+.sponsor-logos:after{
+    @media (max-width: 48em){
+      content: "";
+      display: inline-block;
+      width: 100%;
+      height:0;
+    }
+}
+
 .archive{
     @media (min-width: 80em){
         padding-right: 100px;
